--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
 	"autoload": {
         "psr-0": {
-            {"composer_test_poonam\\HelloWorld\\": "src/"}
+            "composer_test_poonam\\HelloWorld\\": "src/"
         }
     }
     "minimum-stability": "stable"
